# event-stats-api

./: .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  Running REST api test.docx  app.py  docker-compose.yml  event_service.py  manual_test.sh  pyproject.toml  requirements.txt  run.sh  test_app.py  ~$nning REST api test.docx
app/: __init__.py  main.py  models.py  storage.py  utils.py
tests/: test_2.py  test_main.py
